change: model for transaction and menu
