# docs/swagger.json
@@ -78,7 +78,7 @@
         },
         "/api/v1/menu/": {
             "get": {
-                "description": "Get all menu",
+                "description": "Get menu by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -88,15 +88,21 @@
                 "tags": [
                     "menu"
                 ],
-                "summary": "Get all menu",
+                "summary": "Get menu by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "menu id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.MenuDTO"
-                            }
+                            "$ref": "#/definitions/dto.MenuDTO"
                         }
                     }
                 }
@@ -122,6 +128,36 @@
                         "schema": {
                             "$ref": "#/definitions/dto.CreateMenuRequestDTO"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MenuDTO"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete menu by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "menu"
+                ],
+                "summary": "Delete menu by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "menu id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -340,6 +376,51 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "Update User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Update User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "update user",
+                        "name": "user_info",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateUserDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/user/login": {
@@ -405,20 +486,6 @@
                 }
             }
         },
-        "dto.ContentDTO": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.ItemDTO"
-                    }
-                },
-                "kind": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.CreateMenuRequestDTO": {
             "type": "object",
             "properties": {
@@ -445,11 +512,29 @@
                 "address": {
                     "type": "string"
                 },
-                "transactionItems": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.TransactionItemDTO"
-                    }
+                "amount": {
+                    "type": "integer"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "is_afternoon": {
+                    "type": "boolean"
+                },
+                "is_morning": {
+                    "type": "boolean"
+                },
+                "is_noon": {
+                    "type": "boolean"
+                },
+                "lat": {
+                    "type": "number"
+                },
+                "lng": {
+                    "type": "number"
+                },
+                "menu_id": {
+                    "type": "integer"
                 },
                 "user_id": {
                     "type": "integer"
@@ -489,17 +574,17 @@
         "dto.DayMenuDTO": {
             "type": "object",
             "properties": {
-                "contents": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.ContentDTO"
-                    }
-                },
                 "day": {
                     "type": "string"
                 },
                 "image": {
                     "type": "string"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ItemDTO"
+                    }
                 }
             }
         },
@@ -570,27 +655,10 @@
                 "amount": {
                     "type": "integer"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "transactionItems": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.TransactionItemDTO"
-                    }
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dto.TransactionItemDTO": {
-            "type": "object",
-            "properties": {
                 "count": {
+                    "type": "integer"
+                },
+                "id": {
                     "type": "integer"
                 },
                 "is_afternoon": {
@@ -602,7 +670,22 @@
                 "is_noon": {
                     "type": "boolean"
                 },
+                "lat": {
+                    "type": "number"
+                },
+                "lng": {
+                    "type": "number"
+                },
+                "menu": {
+                    "$ref": "#/definitions/dto.MenuDTO"
+                },
                 "menu_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
@@ -614,6 +697,20 @@
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UpdateUserDTO": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "isAdmin": {
+                    "type": "boolean"
+                },
+                "phone_number": {
                     "type": "string"
                 }
             }
