# internal/app/model/dao/transaction.go
@@ -5,7 +5,18 @@ import (
 	"gorm.io/gorm"
 )
 
-type TransactionItem struct {
+//type TransactionItem struct {
+//	gorm.Model
+//	Menu          Menu `gorm:"foreignKey:MenuID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
+//	IsMorning     bool `gorm:"default:false"`
+//	IsNoon        bool `gorm:"default:false"`
+//	IsAfternoon   bool `gorm:"default:false"`
+//	MenuID        uint
+//	TransactionID uint
+//	Count         int
+//}
+
+type Transaction struct {
 	gorm.Model
 	Menu          Menu `gorm:"foreignKey:MenuID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 	IsMorning     bool `gorm:"default:false"`
@@ -14,13 +25,10 @@ type TransactionItem struct {
 	MenuID        uint
 	TransactionID uint
 	Count         int
-}
-
-type Transaction struct {
-	gorm.Model
-	TransactionItems []TransactionItem `gorm:"foreignKey:TransactionID"`
-	Status           transaction_status.TransactionStatus
-	Amount           int
-	Address          string `gorm:"size:255"`
-	UserID           uint
+	Status        transaction_status.TransactionStatus
+	Amount        int
+	Address       string `gorm:"size:255"`
+	UserID        uint
+	Lat           float64 `gorm:"type:decimal(10,8)"`
+	Lng           float64 `gorm:"type:decimal(11,8)"`
 }
